# bazelatops

./: LICENSE  README.md  WORKSPACE
proto/teapotstore/v1/: BUILD.bazel  teapotstore.proto
services/teapotstore/: BUILD.bazel  go.mod
services/teapotstore/frontend/: README.md  package-lock.json
web/: BUILD.bazel  package-lock.json  package.json
web/teapotstore/: BUILD.bazel  package-lock.json  vue.config.js
web/teapotstore/src/: App.vue  BUILD.bazel
