load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/kenota/bazelatops/services/teapotstore
gazelle(name = "gazelle")

go_library(
    name = "teapotstore_lib",
    srcs = ["main.go"],
    importpath = "github.com/kenota/bazelatops/services/teapotstore",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "teapotstore",
    embed = [":teapotstore_lib"],
    visibility = ["//visibility:public"],
)
