load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@npm//@vue/cli-service:index.bzl", "vue_cli_service")
load("@npm//vue-cli-launcher:index.bzl", "vue_cli_launcher")
load("@npm//http-server:index.bzl", "http_server")



write_file(
    name = "write_chdir_script",
    out = "chdir.js",
    content = ["process.chdir(__dirname)"],
)


vue_cli_service(
    name = "serve",
    args = ["serve", "--node_options=--require=./$(rootpath chdir.js)"],
    data = [
        "babel.config.js",
        "//web:package.json",
        "src",
        "chdir.js",
    ],
)

vue_cli_launcher(
  name = "package",
  args = [
    "build",
    "--dest=$(@D)",
    "--resolve-dest-by-cwd",
    "--package-json-path=$(execpath babel.config.js)",
  ],
  data = [
    "babel.config.js",
    "src",
    "@npm//vue",
    "@npm//@vue/cli-plugin-babel",
    # Shouldn't be needed since it's in skip-plugins ?
    "@npm//@vue/cli-plugin-eslint",
  ],
  output_dir = True,
)


http_server(
    name="prodserver",
    data = [":package"],
    templated_args = ["web/teapotstore/package/"],
)