load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@teapotstore_npm//@vue/cli-service:index.bzl", "vue_cli_service")
load("@teapotstore_npm//vue-cli-launcher:index.bzl", "vue_cli_launcher")
load("@teapotstore_npm//http-server:index.bzl", "http_server")

filegroup(
    name = "src_new",
    srcs = glob([
        "*.vue",
        "*.js",
        "**/**",
    ]),
)

vue_cli_launcher(
    name = "package",
    args = [
        "build",
        "--dest=$(@D)",
        "--resolve-dest-by-cwd",
        "--package-json-path=$(execpath package.json)",
    ],
    data = [
        "package.json",
        "babel.config.js",
        "//web/teapotstore/src",
        "@teapotstore_npm//vue",
        "@teapotstore_npm//eslint-plugin-vue",
        "@teapotstore_npm//babel-eslint",
        "@teapotstore_npm//@vue/cli-plugin-babel",
        # Shouldn't be needed since it's in skip-plugins ?
        "@teapotstore_npm//@vue/cli-plugin-eslint",
    ],
    output_dir = True,
)

http_server(
    name = "prodserver",
    data = [":package"],
    templated_args = ["web/teapotstore/package/"],
)
