load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//go:defs.bzl", "go_grpc_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")


proto_library(
    name = "teapotstore_proto",
    srcs = ["teapotstore.proto"],
    deps = [
        "@go_googleapis//google/api:annotations_proto",
        "@com_google_protobuf//:any_proto",
    ],
)

proto_library(
    name = "bazelatops_teapotstore_v1_proto",
    srcs = ["teapotstore.proto"],
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "bazelatops_teapotstore_v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "proto/teapotstore/v1",
    proto = ":bazelatops_teapotstore_v1_proto",
    visibility = ["//visibility:public"],
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

go_library(
    name = "teapotstore",
    embed = [":bazelatops_teapotstore_v1_go_proto"],
    importpath = "proto/teapotstore/v1",
    visibility = ["//visibility:public"],
)

go_grpc_library(
    name = "teapotstore_go_grpc",
    go_deps = [
        "@com_github_golang_protobuf//ptypes/any:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
    importpath = "github.com/kenota/bazelatops/proto/teapotstore/v1",
    deps = [
        ":bazelatops_teapotstore_v1_proto",
    ],
)